Fix chapter header alignment content on mobile.

--- a/src/wbw/chapter-header.scss
+++ b/src/wbw/chapter-header.scss
@@ -15,7 +15,12 @@
             display: none;
         }
 
+        .phonetic {
+            text-align: center;
+        }
+
         .translation {
+            text-align: center;
             display: block;
         }
     }
